# retail-workforce-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  adapting_to_real_data.md
examples/: make_figures.py  run_comp_and_voice.py  run_exit_nlp.py  run_geo_transfers.py  run_labor_anomaly.py  run_onboarding.py  run_operations.py  run_pay_equity.py  run_pipeline.py  run_real_data_audit.py  run_task_standards.py
reports/: bench_strength.csv  callcenter_linkage.csv  callcenter_top_terms.csv  callcenter_topics.json  callout_metrics.json  contagion.csv  demand_forecast_metrics.csv  drivers_hourly_6m.csv  exit_nlp.json  exit_theme_terms.csv  funnel_report.csv  geo_transfers.json  headcount_validation_6m.csv  hiring_plan_6m.csv  interventions_6m.csv  labor_anomaly.json  model_metrics.csv  new_hire_watchlist.csv  nn_vs_gbm_hourly.csv  onboarding.json  pay_elasticity.csv  pay_equity.json  promotion_metrics.json  real_data_audit.json  reason_codes_sample.csv  req_timing.csv  reserve_staffing.csv  schedule_summary.json  shap_importance_hourly_6m.csv  staffing_elasticity.json  summary.json  targeting_roi_6m.json  task_standards.json  transfer_plan.csv  turnover_cost_baseline.csv  wage_event_study.csv  wage_experiments.json  wage_experiments_extra.json
tests/: conftest.py  test_comp_and_voice.py  test_elasticity.py  test_exitnlp.py  test_generator.py  test_geo.py  test_impact_and_explain.py  test_models.py  test_onboarding.py  test_operations.py  test_payequity.py  test_punchclock.py  test_realdata.py  test_snapshots.py  test_tasks.py
(+45 files in other folders)
